--- a/setup.cfg
+++ b/setup.cfg
@@ -5,13 +5,12 @@ classifiers =
     Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
-    Programming Language :: Python :: 3.10
     Operating System :: OS Independent
 
 [options]
 install_requires=
     ensure==1.0.2
-    py-youtube=1.1.7
+    py-youtube==1.1.7
 python_requires = >=3.7
 
 [options.extras_require]
