--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -1,12 +1,12 @@
-ipywidgets
-notebook
-ensure
-py-youtube
+ipywidgets==8.1.3
+notebook==7.2.1
+ensure==1.0.4
+py-youtube==1.1.7
 
 # dev requirements
-pytest
-tox
-black
-flake8
-mypy
+pytest==8.2.2
+tox==4.15.1
+black==24.4.2
+flake8==7.0.0
+mypy==1.10.0
 -e .
