--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -15,15 +15,15 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [windows-latest,ubuntu-latest ]
-        python-version: ["3.8","3.7",  "3.9"]
+        os: [ubuntu-latest, windows-latest]
+        python-version: ["3.7", "3.8", "3.9"]
     
     steps:
     - uses: actions/checkout@v3
     - name: Set up Python  ${{matrix.python-version}}
       uses: actions/setup-python@v3
       with:
-        python-version ${{matrix.python-version}}
+        python-version: ${{matrix.python-version}}
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
